--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/Render Pipeline Support/Built-in RP/VSPro_CTIShaderController.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/CTI_URP_14plus_runtime.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/CTI_URP_12.0_runtime.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/CTI_URP_11.0_runtime.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/CTI_URP_10.3.2_runtime.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/Conifers \[BOTD\] URP_14plus.unitypackage.meta
+Unity3D/Assets/Assets_Download/Conifers \[BOTD\]/Conifers \[BOTD\] URP.unitypackage.meta
